ToDo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-ns
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todo-files
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo
          image: PROJECT/IMAGE
          volumeMounts:
          - name: todo-files
            mountPath: /usr/src/app/files
        - name: todo-image-source
          image: dermotbg/todo-image-source:v0.4
          volumeMounts:
          - name: todo-files
            mountPath: /usr/src/app/files
