ToDo/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  # namespace: todo-ns
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 30s
      - setWeight: 50
      - pause:
          duration: 30s
      - analysis:
          templates:
          - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todo-files
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo
          image: PROJECT/IMAGE
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 20
            failureThreshold: 1
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /backend-health
              port: 3000
            initialDelaySeconds: 30
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /backend-health
              port: 3000
            initialDelaySeconds: 30
            failureThreshold: 1
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
          - name: todo-files
            mountPath: /usr/src/app/files
        - name: todo-image-source
          image: dermotbg/todo-image-source:v0.4
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
          - name: todo-files
            mountPath: /usr/src/app/files
